binary_data: add match strings with {upper/lower}case k for kilo- and kibi-{bits/bytes}

BUG: 483815